<resources>
    <string name="llp_course_outline">Course outline</string>
    <string name="llp_previous">Previous</string>
    <string name="llp_key_learning_points">Key learning points</string>

    <string name="llp_lesson_complete_progress">%1d / %2d lessons completed</string>
    <string name="llp_lesson_complete_percentage">%d%% Complete</string>
    <string name="llp_video_duration">%s - %d minutes</string>
    <string name="llp_doc_duration">%s - %d minutes read</string>
    <string name="llp_empty_hint">Oops, no relevant content found</string>
    <string name="llp_error_hint">Oops, something went wrong</string>
    <string name="llp_refresh">Refresh</string>
    <string name="llp_back_to">Back to %s</string>

</resources>